--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,17 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Courses | Polymer</title>
+
+  <meta property="og:url"
+    content="https://ads60277.github.io/escape-seo/courses.html" />
+  <meta property="og:type" content="Website" />
+  <meta property="og:title" content="Courses | Polymer" />
+  <meta property="og:description" content="How much does culture influence creative thinking?" />
+  <meta property="og:image"
+    content="https://ads60277.github.io/escape-seo/assets/images/15867008846190.png" />
+
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-light mb-5">
     <div class="container">
@@ -159,8 +169,8 @@
               <img src="./assets/images/js.png" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
-                  <a href="./course_js.html"
-                    class="stretched-link h5 text-decoration-none text-dark">Getting Started with
+                  <a href="./course_js.html" class="stretched-link h5 text-decoration-none text-dark">Getting Started
+                    with
                     JavaScript</a>
                 </h5>
                 <ul class="mb-3 list-unstyled d-flex text-muted">
@@ -184,9 +194,7 @@
                 </div>
               </div>
               <div class="card-footer">
-                <img
-                  src="./assets/images/teacher1.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -197,8 +205,8 @@
               <img src="./assets/images/html.png" class="card-img-top" style="height:150px;object-fit:cover">
               <div class="card-body">
                 <h5 class="mb-2">
-                  <a href="./course_html.html"
-                    class="stretched-link h5 text-decoration-none text-dark">Getting Started with
+                  <a href="./course_html.html" class="stretched-link h5 text-decoration-none text-dark">Getting Started
+                    with
                     HTML</a>
                 </h5>
                 <ul class="mb-3 list-unstyled d-flex text-muted">
@@ -222,9 +230,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img
-                  src="./assets/images/teacher1.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -259,9 +265,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img
-                  src="./assets/images/teacher1.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -296,9 +300,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img
-                  src="./assets/images/teacher2.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
@@ -333,9 +335,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img
-                  src="./assets/images/teacher2.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
@@ -370,9 +370,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img
-                  src="./assets/images/teacher2.jpg"
-                  class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
@@ -399,8 +397,8 @@
   </div>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
