--- a/course_js.html
+++ b/course_js.html
@@ -10,9 +10,11 @@
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="all.css">
   <title>Javascript | Polymer</title>
-
+  <meta property="og:image:width" content="600">
+  <meta property="og:image:height" content="600">
   <meta property="og:url" content="https://ads60277.github.io/escape-seo/course_js.html" />
   <meta property="og:type" content="Website" />
+  <meta property="og:locale" content="zh_TW">
   <meta property="og:title" content="Javascript | Polymer" />
   <meta property="og:description" content="Javascript | Polymerore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci? Omnis consequuntur voluptas placeat vel natus odit ad suscipit doloremque nostrum totam! Numquam pariatur iste consequuntur sit delectus quas praesentium quam, cumque accusantium modi ipsa nisi quod. Ipsam magnam quae ipsum, porro minima nam sequi harum laborum a corporis. Molestias similique odio soluta necessitatibus quo eaque amet consequuntur nobis eligendi delectus, expedita nemo voluptatem ea perferendis neque temporibus ducimus error veniam minus tempore totam aut!" />
   <meta property="og:image" content="https://ads60277.github.io/escape-seo/assets/images/js.png" />
@@ -21,20 +23,37 @@
       "@context": "https://schema.org/",
       "@type": "Product",
       "name": "Javascript | Polymer",
-      "image": "http://images.edge-generalmills.com/56459281-6fe6-4d9d-984f-385c9488d824.jpg",
+      "image": "https://ads60277.github.io/escape-seo/assets/images/javasctipt.png",
       "description": "Javascript | Polymerore officia quia sint laudantium aspernatur aliquam tempora veritatis tenetur dolorem iure eaque itaque corrupti possimus neque ipsa laboriosam alias ea adipisci? Omnis consequuntur voluptas placeat vel natus odit ad suscipit doloremque nostrum totam! Numquam pariatur iste consequuntur sit delectus quas praesentium quam, cumque accusantium modi ipsa nisi quod. Ipsam magnam quae ipsum, porro minima nam sequi harum laborum a corporis. Molestias similique odio soluta necessitatibus quo eaque amet consequuntur nobis eligendi delectus, expedita nemo voluptatem ea perferendis neque temporibus ducimus error veniam minus tempore totam aut!",
+      "review": {
+        "@type": "Review",
+        "reviewRating": {
+          "@type": "Rating",
+          "ratingValue": "4.5",
+          "bestRating": "5"
+        },
+        "author": {
+          "@type": "Person",
+          "name": "Charlie"
+        }
+      },
+      "brand": {
+        "@type": "Brand",
+        "name": "Polymer"
+      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
-        "reviewCount": "13245",
-        "bestRating": "5",
-        "worstRating": "1"
+        "reviewCount": "13245"
       },
       "offers": {
         "@type": "Offer",
+        "url": "https://ads60277.github.io/escape-seo/course_js",
+        "priceCurrency": "NTD",
         "price": "2600",
-        "availability": "https://schema.org/InStock",
-        "priceCurrency": "USD"
+        "priceValidUntil": "2022-12-31",
+        "itemCondition": "https://schema.org/UsedCondition",
+        "availability": "https://schema.org/InStock"
       }
     }
     </script>
