--- a/courses.html
+++ b/courses.html
@@ -18,7 +18,7 @@
   <meta property="og:description" content="How much does culture influence creative thinking?" />
   <meta property="og:image"
     content="https://ads60277.github.io/escape-seo/assets/images/15867008846190.png" />
-
+    <meta property="og:locale" content="zh_TW">
 </head>
 
 <body>
