--- a/courses.html
+++ b/courses.html
@@ -194,7 +194,7 @@
                 </div>
               </div>
               <div class="card-footer">
-                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -230,7 +230,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -265,7 +265,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img src="./assets/images/teacher1.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher1.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Charlie
               </div>
@@ -300,7 +300,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
@@ -335,7 +335,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
@@ -370,7 +370,7 @@
                 </div>
               </div>
               <div class="card-footer ">
-                <img src="./assets/images/teacher2.jpg" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
+                <img src="./assets/images/teacher2.webp" class="rounded-circle img-fluid" style="width:25px;height:25px;object-fit:cover;
             ">
                 Casper
               </div>
