--- a/course_js.html
+++ b/course_js.html
@@ -48,7 +48,7 @@
       "offers": {
         "@type": "Offer",
         "url": "https://ads60277.github.io/escape-seo/course_js",
-        "priceCurrency": "NTD",
+        "priceCurrency": "TWD",
         "price": "2600",
         "priceValidUntil": "2022-12-31",
         "itemCondition": "https://schema.org/UsedCondition",
